[package]
name = "rs-internal-ue-palia"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.1.0"
once_cell = "1.18.0"

[dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation", 
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_System_WindowsProgramming", 
    "Win32_System_SystemServices", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_OpenGL", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Console", 
    "Win32_Graphics_Gdi"
]